@@ -42,25 +42,25 @@ SUBROUTINE path_gen_inputs(parse_file_name,engine_prefix,nimage,root,comm)
      READ(parse_unit,fmt='(A512)',END=10) dummy
   ENDDO
   
-  IF(trim(dummy)=="BEGIN") THEN
-     DO WHILE (trim(dummy)/="END")
+  IF(trim(ADJUSTL(dummy)) == "BEGIN") THEN
+     DO WHILE (trim(ADJUSTL(dummy)) /= "END")
         READ(parse_unit,*) dummy
-        IF(trim(dummy)=="BEGIN_PATH_INPUT") THEN
+        IF(trim(ADJUSTL(dummy)) == "BEGIN_PATH_INPUT") THEN
            
            READ(parse_unit,'(A512)') dummy
            
-           DO WHILE (trim(dummy)/="END_PATH_INPUT")
-              IF(myrank==root) WRITE(neb_unit,*) trim(dummy)
+           DO WHILE (trim(ADJUSTL(dummy)) /= "END_PATH_INPUT")
+              IF(myrank==root) WRITE(neb_unit,*) trim(ADJUSTL(dummy))
               READ(parse_unit,'(A512)') dummy
            ENDDO
         ENDIF
-        IF(trim(dummy)=="FIRST_IMAGE") THEN
+        IF(trim(ADJUSTL(dummy)) == "FIRST_IMAGE") THEN
            nimage = nimage + 1
         ENDIF
-        IF(trim(dummy)=="INTERMEDIATE_IMAGE") THEN
+        IF(trim(ADJUSTL(dummy)) == "INTERMEDIATE_IMAGE") THEN
            nimage = nimage + 1
         ENDIF
-        IF(trim(dummy)=="LAST_IMAGE") THEN
+        IF(trim(ADJUSTL(dummy)) == "LAST_IMAGE") THEN
            nimage=nimage+1
         ENDIF
      ENDDO
@@ -98,57 +98,58 @@ SUBROUTINE path_gen_inputs(parse_file_name,engine_prefix,nimage,root,comm)
         READ(parse_unit,fmt='(A512)',END=10) dummy
      ENDDO
      
-     IF(trim(dummy)=="BEGIN") THEN
-        DO WHILE (trim(dummy)/="END")
+     IF(trim(ADJUSTL(dummy)) == "BEGIN") THEN
+        DO WHILE (trim(ADJUSTL(dummy)) /= "END")
            dummy=""
            DO WHILE (len_trim(dummy)<1)
               READ(parse_unit,fmt='(A512)',END=10) dummy
            ENDDO
            
-           IF(trim(dummy)=="BEGIN_ENGINE_INPUT") THEN
+           IF(trim(ADJUSTL(dummy)) == "BEGIN_ENGINE_INPUT") THEN
               dummy=""
               DO WHILE (len_trim(dummy)<1)
                  READ(parse_unit,fmt='(A512)',END=10) dummy
               ENDDO
               
-              DO WHILE (trim(dummy)/="BEGIN_POSITIONS")
+              DO WHILE (trim(ADJUSTL(dummy)) /= "BEGIN_POSITIONS")
                  IF(myrank==root) WRITE(unit_tmp_i,'(A)') trim(dummy)
                  READ(parse_unit,'(A512)') dummy
               ENDDO
               IF(i==1) THEN
-                 DO WHILE (trim(dummy)/="FIRST_IMAGE")
+                 DO WHILE (trim(ADJUSTL(dummy)) /= "FIRST_IMAGE")
                     READ(parse_unit,'(A512)') dummy
                  ENDDO
-                 IF(trim(dummy)=="FIRST_IMAGE") THEN
+                 IF(trim(ADJUSTL(dummy)) == "FIRST_IMAGE") THEN
                     READ(parse_unit,'(A512)') dummy
-                    DO WHILE (trim(dummy)/="INTERMEDIATE_IMAGE".and.(trim(dummy)/="LAST_IMAGE"))
-                       IF(myrank==root) WRITE(unit_tmp_i,'(A)') trim(dummy)
+                    DO WHILE (trim(ADJUSTL(dummy)) /= "INTERMEDIATE_IMAGE" &
+                        .and.(trim(ADJUSTL(dummy)) /= "LAST_IMAGE"))
+                       IF(myrank==root) WRITE(unit_tmp_i,'(A)') trim(ADJUSTL(dummy))
                        READ(parse_unit,'(A512)') dummy
                     ENDDO
-                    DO WHILE (trim(dummy)/="END_POSITIONS")
+                    DO WHILE (trim(ADJUSTL(dummy)) /= "END_POSITIONS")
                        READ(parse_unit,'(A512)') dummy
                     ENDDO
                     READ(parse_unit,'(A512)') dummy
-                    DO WHILE (trim(dummy)/="END_ENGINE_INPUT")
-                       IF(myrank==root) WRITE(unit_tmp_i,'(A)') trim(dummy)
+                    DO WHILE (trim(ADJUSTL(dummy)) /= "END_ENGINE_INPUT")
+                       IF(myrank==root) WRITE(unit_tmp_i,'(A)') trim(ADJUSTL(dummy))
                        READ(parse_unit,'(A512)') dummy
                     ENDDO
                  ENDIF
               ENDIF
               !
               IF(i==nimage) THEN
-                 DO WHILE (trim(dummy)/="LAST_IMAGE")
+                 DO WHILE (trim(ADJUSTL(dummy)) /= "LAST_IMAGE")
                     READ(parse_unit,'(A512)') dummy
                  ENDDO
-                 IF(trim(dummy)=="LAST_IMAGE") THEN
+                 IF(trim(ADJUSTL(dummy)) == "LAST_IMAGE") THEN
                     READ(parse_unit,'(A512)') dummy
-                    DO WHILE (trim(dummy)/="END_POSITIONS")
-                       IF(myrank==root) WRITE(unit_tmp_i,'(A)') trim(dummy)
+                    DO WHILE (trim(ADJUSTL(dummy)) /= "END_POSITIONS")
+                       IF(myrank==root) WRITE(unit_tmp_i,'(A)') trim(ADJUSTL(dummy))
                        READ(parse_unit,'(A512)') dummy
                     ENDDO
                     READ(parse_unit,'(A512)') dummy
-                    DO WHILE (trim(dummy)/="END_ENGINE_INPUT")
-                       IF(myrank==root) WRITE(unit_tmp_i,'(A)') trim(dummy)
+                    DO WHILE (trim(ADJUSTL(dummy)) /= "END_ENGINE_INPUT")
+                       IF(myrank==root) WRITE(unit_tmp_i,'(A)') trim(ADJUSTL(dummy))
                        READ(parse_unit,'(A512)') dummy
                     ENDDO
                  ENDIF
@@ -157,23 +158,24 @@ SUBROUTINE path_gen_inputs(parse_file_name,engine_prefix,nimage,root,comm)
               IF(i/=nimage.and.i/=1) THEN
                  DO j=2,i
                     dummy=""
-                    DO WHILE (trim(dummy)/="INTERMEDIATE_IMAGE")
+                    DO WHILE (trim(ADJUSTL(dummy)) /= "INTERMEDIATE_IMAGE")
                        READ(parse_unit,'(A512)') dummy
 !!! write(0,*) i,j,trim(dummy)
                     ENDDO
                  ENDDO
-                 IF(trim(dummy)=="INTERMEDIATE_IMAGE") THEN
+                 IF(trim(ADJUSTL(dummy)) == "INTERMEDIATE_IMAGE") THEN
                     READ(parse_unit,'(A512)') dummy
-                    DO WHILE ((trim(dummy)/="LAST_IMAGE").and.trim(dummy)/="INTERMEDIATE_IMAGE")
-                       IF(myrank==root) WRITE(unit_tmp_i,'(A)') trim(dummy)
+                    DO WHILE ((trim(ADJUSTL(dummy)) /= "LAST_IMAGE") .and. &
+                               trim(ADJUSTL(dummy)) /= "INTERMEDIATE_IMAGE")
+                       IF(myrank==root) WRITE(unit_tmp_i,'(A)') trim(ADJUSTL(dummy))
                        READ(parse_unit,'(A512)') dummy
                     ENDDO
-                    DO WHILE (trim(dummy)/="END_POSITIONS")
+                    DO WHILE (trim(ADJUSTL(dummy)) /= "END_POSITIONS")
                        READ(parse_unit,'(A512)') dummy
                     ENDDO
                     READ(parse_unit,'(A512)') dummy
-                    DO WHILE (trim(dummy)/="END_ENGINE_INPUT")
-                       IF(myrank==root) WRITE(unit_tmp_i,'(A)') trim(dummy)
+                    DO WHILE (trim(ADJUSTL(dummy)) /= "END_ENGINE_INPUT")
+                       IF(myrank==root) WRITE(unit_tmp_i,'(A)') trim(ADJUSTL(dummy))
                        READ(parse_unit,'(A512)') dummy
                     ENDDO
                  ENDIF
